# reqsmd

./: .gitignore  README.md  TODO.md  pyproject.toml
example/: req-template.json
example-reqs/: MDOORS-1.md  MDOORS-2.md  MDOORS-3.md  REQSMD-1.md  REQSMD-2.md  REQSMD-3.md  req-template.json
example-reqs/cli/: CLI-1.md  CLI-2.md  CLI-3.md  CLI-4.md  CLI-5.md  CLI-6.md  CLI-7.md
example-reqs/core/: CORE-1.md  CORE-2.md  CORE-3.md  CORE-4.md
example-reqs/format/: FMT-1.md  FMT-2.md  FMT-3.md  FMT-4.md  FMT-5.md  FMT-6.md  FMT-7.md  FMT-8.md  FMT-9.md
example-reqs/verify/: VER-1.md  VER-2.md  VER-3.md
example-reqs/web/: WEB-1.md  WEB-2.md  WEB-3.md  WEB-4.md  WEB-5.md  WEB-6.md  WEB-7.md
example-reqs/web/pages/: PAGE-1.md  PAGE-2.md  PAGE-3.md  PAGE-4.md  (+2 more)
example/ground/: GND-01.md  GND-02.md  GND-03.md
example/mission/: MISS-01.md  MISS-02.md  MISS-03.md
example/operations/: OPS-01.md  OPS-02.md  OPS-03.md  OPS-04.md
example/spacecraft/: SC-01.md  SC-02.md  SC-03.md
mdoors-reqs/: MDOORS-2.md  MDOORS-3.md  req-template.json
mdoors-reqs/.obsidian/: graph.json  workspace.json
mdoors-reqs/cli/: CLI-1.md  CLI-2.md  CLI-3.md  CLI-4.md  CLI-5.md
mdoors-reqs/core/: CORE-1.md  CORE-2.md  CORE-3.md
mdoors-reqs/format/: FMT-3.md  FMT-4.md  FMT-5.md  FMT-7.md  FMT-8.md  FMT-9.md
mdoors-reqs/web/: WEB-1.md  WEB-4.md
src/mdoors/: __init__.py  cli.py  core.py  web.py
src/reqsmd/: __init__.py  cli.py  core.py  importer.py  web.py
src/reqsmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: search.js  style.css
(+35 files in other folders)
